crates/java-syntax/src/snapshots/java_syntax__lexer__tests__boolean_and_null_literals.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"true false null\")"
---
[
    (
        TRUE_LIT,
        "true",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        FALSE_LIT,
        "false",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NULL_LIT,
        "null",
    ),
]
