crates/java-syntax/src/snapshots/java_syntax__lexer__tests__char_literals.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"'a' '\\\\n' '\\\\''\")"
---
[
    (
        CHAR_LIT,
        "'a'",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        CHAR_LIT,
        "'\\n'",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        CHAR_LIT,
        "'\\''",
    ),
]
