crates/java-syntax/src/snapshots/java_syntax__lexer__tests__comment_termination_variants-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"// normal comment \\r int z = 3;\")"
---
[
    (
        LINE_COMMENT,
        "// normal comment ",
    ),
    (
        WHITESPACE,
        "\r ",
    ),
    (
        INT_KW,
        "int",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "z",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        EQUAL,
        "=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "3",
    ),
    (
        SEMICOLON,
        ";",
    ),
]
