crates/java-syntax/src/snapshots/java_syntax__lexer__tests__comment_termination_variants-3.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"// normal comment \\r\\n int w = 4;\")"
---
[
    (
        LINE_COMMENT,
        "// normal comment ",
    ),
    (
        WHITESPACE,
        "\r\n ",
    ),
    (
        INT_KW,
        "int",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "w",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        EQUAL,
        "=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "4",
    ),
    (
        SEMICOLON,
        ";",
    ),
]
