crates/java-syntax/src/snapshots/java_syntax__lexer__tests__comment_termination_variants.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"// hidden comment \\\\u000A int x = 1;\")"
---
[
    (
        LINE_COMMENT,
        "// hidden comment ",
    ),
    (
        WHITESPACE,
        "\n ",
    ),
    (
        INT_KW,
        "int",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "x",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        EQUAL,
        "=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "1",
    ),
    (
        SEMICOLON,
        ";",
    ),
]
