crates/java-syntax/src/snapshots/java_syntax__lexer__tests__comments-3.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"int /* comment */ x // line\")"
---
[
    (
        INT_KW,
        "int",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        BLOCK_COMMENT,
        "/* comment */",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "x",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        LINE_COMMENT,
        "// line",
    ),
]
