crates/java-syntax/src/snapshots/java_syntax__lexer__tests__comments.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"// this is a line comment\\n\")"
---
[
    (
        LINE_COMMENT,
        "// this is a line comment",
    ),
    (
        WHITESPACE,
        "\n",
    ),
]
