crates/java-syntax/src/snapshots/java_syntax__lexer__tests__complex_jls_scenario.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"List<String> list = new ArrayList<>();\")"
---
[
    (
        IDENTIFIER,
        "List",
    ),
    (
        LESS,
        "<",
    ),
    (
        IDENTIFIER,
        "String",
    ),
    (
        GREATER,
        ">",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "list",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        EQUAL,
        "=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NEW_KW,
        "new",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "ArrayList",
    ),
    (
        LESS,
        "<",
    ),
    (
        GREATER,
        ">",
    ),
    (
        L_PAREN,
        "(",
    ),
    (
        R_PAREN,
        ")",
    ),
    (
        SEMICOLON,
        ";",
    ),
]
