crates/java-syntax/src/snapshots/java_syntax__lexer__tests__empty_and_whitespace-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\" \\t\\n\\r  \")"
---
[
    (
        WHITESPACE,
        " \t\n\r  ",
    ),
]
