crates/java-syntax/src/snapshots/java_syntax__lexer__tests__error_invalid_char-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"''\")"
---
[
    InvalidChar,
]
